PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Fix for older versions of PHP such as in RHEL7
pts-core: Add Thermald version reporting to system table when active
phodevi: Avoid "11th Gen Intel" CPU string
phodevi: Update for NVMe drive reporting with KIOXIA sometimes not reporting their brand first

Phoronix Test Suite 10.0.0
13 October 2020

pts-core: Ensure any post-run script is triggered still under halt-testing/skip-test conditions
pts-core: Allow batch processing of performance per dollar metrics
phodevi: Add Intel AMX presence detection
phodevi: Add detection for Intel Alder Lake, Jasper Lake, Sapphire Rapids, and others
phoromatic: Ensure Windows tests get displayed even if running the Phoromatic Server on Linux
flush_caches: Add module to flush system caches between runs
test_timeout: Add module to quit a test run if it exceeds a predefined time limit or 'auto' determination

Phoronix Test Suite 10.0.0 Milestone 3
1 October 2020

pts-core: Don't show Vulkan options if Vulkan support is known to be unavailable/broken
pts-core: Add OptionSelect tag support within test suite definitions
pts-core: Allow * wildcard match in FileCheck handling within external dependency XML
pts-core: Add "OS" TestType
pts-core: Various external dependency updates
pts-core: Continued tweaking to the analytics engine
phodevi: Add Neoverse N2, Cortex-X1 detection and other Arm CPU updates
pts_Graph: Various improvements

Phoronix Test Suite 10.0.0 Milestone 2
12 September 2020

pts-core: Honor NO_COLOR environment variable for disabling terminal coloring
pts-core: Allow launching just the result viewer from systemd (phoronix-result-server.service)
pts-core: Result viewer UI tweaks
pts-core: Minor fixes
pts-core: Add RequiresRootInstall test profile option
pts-core: Result file text output tweaks
pts-core: More robust test result parsing in certain time formats

Phoronix Test Suite 10.0.0 Milestone 1
19 August 2020
