@@ -4,8 +4,9 @@ Phoronix Test Suite (Git)
 
 pts-core: Fix for older versions of PHP such as in RHEL7
 pts-core: Add Thermald version reporting to system table when active
+phodevi: Detection improvements for new CPUs
 phodevi: Avoid "11th Gen Intel" CPU string
-phodevi: Update for NVMe drive reporting with KIOXIA sometimes not reporting their brand first
+phodevi: Update for NVMe drive reporting with KIOXIA, Toshiba sometimes not reporting their brand first
 
 Phoronix Test Suite 10.0.0
 13 October 2020
